<resources>
    <string name="app_name">TraceIt</string>
    <!-- Replace with your actual Web Client ID from Firebase Console -> Authentication -> Sign-in method -> Google -->
    <string name="default_web_client_id">\943784512883-1251bef47v4rvpjcrq8aqpsepvj7sje8.apps.googleusercontent.com</string>
    <string name="add_post_title">Add Post</string>
    <string name="upload_image">Upload Image</string>
    <string name="i_lost_it">I Lost It</string>
    <string name="i_found_it">I Found It</string>
    <string name="item_title">Item Title</string>
    <string name="item_description">Description</string>
    <string name="select_category">Select Category</string>
    <string name="select_date">Select Date</string>
    <string name="select_location">Select Location</string>
    <string name="post_item">Post Item</string>
    <string name="message_hint">Type a message...</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="search_hint">Search items...</string>
    <string name="filter_all">All</string>
    <string name="filter_lost">Lost</string>
    <string name="filter_found">Found</string>
    <string name="no_items_found">No items found</string>
    <string name="app_tagline">Trace your lost belongings</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_empty_field">Field cannot be empty</string>
    <string name="logging_in">Logging in...</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account? Sign up</string>
    <string name="greeting_morning">Good Morning</string>
    <string name="greeting_afternoon">Good Afternoon</string>
    <string name="greeting_evening">Good Evening</string>
    <string name="error_network">Network error</string>
    <string name="resolved_badge">Resolved</string>
    <string name="contact_owner">Contact Owner</string>
    <string name="contact_finder">Contact Finder</string>
    <string name="error_image_upload">Failed to upload image</string>
    <string name="error_post_failed">Failed to post item</string>
    <string name="saving_post">Saving post...</string>
    <string name="creating_account">Creating account...</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="my_active_posts">My Active Posts</string>
    <string name="resolved_items">Resolved Items</string>
    <string name="error_weak_password">Password too weak</string>
    <string name="error_passwords_dont_match">Passwords don\'t match</string>
    <string name="posted_by">Posted By</string>
    <string name="mark_resolved">Mark as Resolved</string>
</resources>
